force-app/main/default/objects/Account_Lead__c/Account_Lead__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant (ibau, infobau)
2. ZR
3. SF-1155</description>
    <label>Account Lead</label>
    <nameField>
        <label>Account Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>