force-app/main/default/objects/Account_Lead__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>1. Integration relevant (ibau, infobau)
2. ZR
3. SF-1155</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>