force-app/main/default/objects/Account_Lead__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>1. Integration relevant (ibau, infobau)
2. ZR
3. SF-1155</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>