force-app/main/default/objects/Account_Lead__c/fields/Ibau_Id__c.field-meta.xml
<CustomField>
    <fullName>Ibau_Id__c</fullName>
    <description>1. Integration relevant (ibau)
2. ZR
3. SF-1155</description>
    <externalId>true</externalId>
    <label>Ibau Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>