force-app/main/default/objects/Account_Lead__c/fields/Infobau_Id__c.field-meta.xml
<CustomField>
    <fullName>Infobau_Id__c</fullName>
    <description>1. Integration relevant (infobau)
2. ZR
3. SF-1155</description>
    <externalId>true</externalId>
    <label>Infobau Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>