force-app/main/default/objects/Account_Lead__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>1. Integration relevant (ibau, infobau)
2. ZR
3. SF-1155</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>