force-app/main/default/objects/Account_Lead__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>1. Integration relevant (ibau, infobau)
2. ZR
3. SF-1155</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_System</valueSetName>
    </valueSet>
</CustomField>