force-app/main/default/objects/Account_Lead__c/fields/Source_System_Exact__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Exact__c</fullName>
    <description>1. Integration relevant (ibau, infobau)
2. SF
3. SF-1155</description>
    <label>Source System Exact</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source_System__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ibau</fullName>
            </value>
            <value>
                <fullName>infobau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>