force-app/main/default/objects/Account_Lead__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-1155</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>