force-app/main/default/objects/Account_Lead__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>1. Integration relevant
2. ZR
3. SF-1155</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>