force-app/main/default/objects/Account_Lead__c/recordTypes/Account_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Account_Lead_Record_Type</fullName>
    <active>true</active>
    <description>1. Not integration relevant 2. ZR 3. SF-1155</description>
    <label>Account Lead Record Type</label>
</RecordType>