force-app/main/default/objects/Account_Lead__c/validationRules/ZR_Emaillenght_Account_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_Emaillenght_Account_Lead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should enforce a field lengths of maximum 60 characters for this Email-field.</description>
    <errorConditionFormula>LEN(Email__c)&gt;= 60
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter less than 60 characters.</errorMessage>
</ValidationRule>