force-app/main/default/objects/Account_Lead__c/validationRules/ZR_Faxnumber_DIN5008_Account_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_Faxnumber_DIN5008_Account_Lead</fullName>
    <active>true</active>
    <description>SF-1155 This validation ensures that faxnumbers are entered in a valid format according to DIN5008. They should always start with a &apos;+&apos; followed by a country code and the faxnumber. They should not include any letters or special characters.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Fax__c)),
(LEN(Fax__c) &lt; 10 ||
LEN(Fax__c) &gt; 20||
NOT(REGEX(Fax__c,&quot;\\+([0-9 -]+)*&quot;))))
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorDisplayField>Fax__c</errorDisplayField>
    <errorMessage>Please enter a valid faxnumber, starting with a plus sign, followed by a country code. Do not include letters or special characters, use at least 10 and max. 20 characters. Valid example: +49123456789</errorMessage>
</ValidationRule>