force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_999_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_999_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{3}&quot;). Example: 999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( Address__PostalCode__s)),
OR(
ISPICKVAL(Address__CountryCode__s, &quot;FO&quot;),
ISPICKVAL(Address__CountryCode__s, &quot;IS&quot;),
ISPICKVAL(Address__CountryCode__s, &quot;MG&quot;),
ISPICKVAL(Address__CountryCode__s, &quot;PG&quot;)
)),
NOT(REGEX(Address__PostalCode__s, (&quot;\\d{3}&quot;))),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of three numbers. Example: 999</errorMessage>
</ValidationRule>