force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_AD_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_AD_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z]{2}\\d{3}&quot;). Example: AA999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;AD&quot;)),
NOT(REGEX(Address__PostalCode__s, (&quot;[A-Z]{2}\\d{3}&quot;))),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of two uppercase letters and three numbers. Example: AA999</errorMessage>
</ValidationRule>