force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_BR_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_BR_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{8}&quot;) or (&quot;\\d{5}[-]\\d{3}&quot;). Example: 99999999 or 99999-999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;BR&quot;)),
NOT(
OR(
REGEX(Address__PostalCode__s,(&quot;\\d{8}&quot;)),
REGEX(Address__PostalCode__s,(&quot;\\d{5}[-]\\d{3}&quot;))
)
),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of eight numbers and can include a hyphen between the fifth and the sixth number. Example: 99999999 or 99999-999.</errorMessage>
</ValidationRule>