force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_GB_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_GB_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;GB&quot;)),
NOT(
OR(
REGEX(Address__PostalCode__s, (&quot;[A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(Address__PostalCode__s, (&quot;[A-Z][A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(Address__PostalCode__s, (&quot;[A-Z][A-Z][0-9][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(Address__PostalCode__s, (&quot;[A-Z][0-9][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(Address__PostalCode__s, (&quot;[A-Z][0-9][A-Z][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(Address__PostalCode__s, (&quot;[A-Z][A-Z][0-9][A-Z][ ][0-9][A-Z][A-Z]&quot;))
)
),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should follow one of these examples: A9 9AA, AA9 9AA, AA99 9AA, A99 9AA, A9A 9AA or AA9A 9AA.</errorMessage>
</ValidationRule>