force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_GG_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_GG_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z][A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;) or (&quot;[A-Z][A-Z][0-9][0-9][ ][0-9][A-Z][A-Z]&quot;). Example: AA9 9AA or AA99 9AA.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;GG&quot;)),
NOT(
OR(
REGEX(Address__PostalCode__s,(&quot;[A-Z][A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(Address__PostalCode__s,(&quot;[A-Z][A-Z][0-9][0-9][ ][0-9][A-Z][A-Z]&quot;))
)
),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should follow one of these examples: AA9 9AA or AA99 9AA.</errorMessage>
</ValidationRule>