force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_IL_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_IL_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{5}&quot;) or (&quot;\\d{7}&quot;). Example: 99999 or 9999999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;IL&quot;)),
NOT(
OR(
REGEX(Address__PostalCode__s, (&quot;\\d{5}&quot;)),
REGEX(Address__PostalCode__s, (&quot;\\d{7}&quot;))
)
),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of five or seven numbers. Example: 99999 or 9999999</errorMessage>
</ValidationRule>