force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_JP_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_JP_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{3}[-]\\d{4}&quot;). Example: 999-9999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;JP&quot;)),
NOT(REGEX(Address__PostalCode__s, (&quot;\\d{3}[-]\\d{4}&quot;))),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should start with three numbers, followed by a hyphen and four numbers. Example: 999-9999</errorMessage>
</ValidationRule>