force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_MV_MX_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_MV_MX_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{4}&quot;) or (&quot;\\d{5}&quot;). Example: 9999 or 99999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
OR(
ISPICKVAL(Address__CountryCode__s, &quot;MV&quot;),
ISPICKVAL(Address__CountryCode__s, &quot;MX&quot;))),
NOT(
OR(
REGEX(Address__PostalCode__s, (&quot;\\d{4}&quot;)),
REGEX(Address__PostalCode__s, (&quot;\\d{5}&quot;))
)
),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of four or five numbers. Example: 9999 or 99999</errorMessage>
</ValidationRule>