force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_NL_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_NL_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{4}[ ][A-Z]{2}&quot;) or (&quot;\\d{4}&quot;)). Example: 9999 AA or 9999</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;NL&quot;)),
NOT(
OR(
REGEX(Address__PostalCode__s,(&quot;\\d{4}[ ][A-Z]{2}&quot;)),
REGEX(Address__PostalCode__s,(&quot;\\d{4}&quot;))
)
),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should start with four numbers optionally followed by a space and two uppercase letters. Example: 9999 or 9999 AA</errorMessage>
</ValidationRule>