force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_PT_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_PT_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{4}[-]\\d{3}&quot;). Example: 9999-999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;PT&quot;)),
NOT(REGEX(Address__PostalCode__s, (&quot;\\d{4}[-]\\d{3}&quot;))),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should start with four numbers, followed by a hyphen and three numbers. Example: 9999-999</errorMessage>
</ValidationRule>