force-app/main/default/objects/Account_Lead__c/validationRules/ZR_ZipCode_Validation_SZ_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_SZ_AccountLead</fullName>
    <active>true</active>
    <description>SF-1155 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z][0-9][0-9][0-9]&quot;). Example: A999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Address__PostalCode__s)),
ISPICKVAL(Address__CountryCode__s, &quot;SZ&quot;)),
NOT(REGEX(Address__PostalCode__s, (&quot;[A-Z][0-9][0-9][0-9]&quot;))),FALSE)
&amp;&amp; ISPICKVAL(Status__c, &quot;Qualification&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of an uppercase letter followed by three numbers. Example: A999</errorMessage>
</ValidationRule>