force-app/main/default/objects/Account_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ibau_Id__c</columns>
    <columns>Infobau_Id__c</columns>
    <columns>Address__Street__s</columns>
    <columns>Address__PostalCode__s</columns>
    <columns>Address__City__s</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>